--- a/style.css
+++ b/style.css
@@ -28,3 +28,45 @@ footer {
   background: #333a40;
   color: white;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+header li {
+  display: inline;
+}
+
+header h1,
+nav {
+  display: inline-block;
+}
+
+main {
+  width: 680px;
+  display: inline-block;
+}
+
+aside {
+  width: 270px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.product {
+  border: 1px solid grey;
+  width: 200px;
+  margin: 5px;
+  padding: 5px;
+  display: inline-block;
+}
+
+img {
+  max-width: 100%;
+}
+
+.button {
+  padding: 10px;
+  display: inline-block;
+}
